RESOLVED FIXED268686
Backtrace print methods should be able to change stack depth at runtime
https://bugs.webkit.org/show_bug.cgi?id=268686
Summary Backtrace print methods should be able to change stack depth at runtime
Abrar Rahman Protyasha
Reported 2024-02-03 02:51:27 PST
Instead of having to modify the framesToShow and framesToSkip variables, we should allow backtrace print methods which take the stack depth as an argument.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-03 02:51:36 PST
Abrar Rahman Protyasha
Comment 2 2024-02-03 02:57:51 PST
EWS
Comment 3 2024-02-05 12:36:21 PST
Committed 274110@main (314032f5abcd): <https://commits.webkit.org/274110@main> Reviewed commits have been landed. Closing PR #23807 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.